exports[`test-title > invalid(1): import test from 'node:test';\ntest({name: ' a ', fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: ' a ', fn() {}});

`;

exports[`test-title > invalid(1): import test from 'node:test';\ntest({name: ' a ', fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: ' a ', fn() {}});
    |             ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'a', fn() {}});

`;

exports[`test-title > invalid(10): import test from \"node:test\";\ntest(\"\", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("", () => {});

`;

exports[`test-title > invalid(10): import test from \"node:test\";\ntest(\"\", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("", () => {});
    |      ^^ Test title must not be empty.

`;

exports[`test-title > invalid(11): import test from \"node:test\";\ntest(\`\`, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(\`\`, () => {});

`;

exports[`test-title > invalid(11): import test from \"node:test\";\ntest(\`\`, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(\`\`, () => {});
    |      ^^ Test title must not be empty.

`;

exports[`test-title > invalid(12): import test from \"node:test\";\ntest(\"   \", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("   ", () => {});

`;

exports[`test-title > invalid(12): import test from \"node:test\";\ntest(\"   \", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("   ", () => {});
    |      ^^^^^ Test title must not be empty.

`;

exports[`test-title > invalid(13): import test from \"node:test\";\ntest(\" foo \", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(" foo ", () => {});

`;

exports[`test-title > invalid(13): import test from \"node:test\";\ntest(\" foo \", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(" foo ", () => {});
    |      ^^^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test("foo", () => {});

`;

exports[`test-title > invalid(14): import test from \"node:test\";\ntest(\"  foo\", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("  foo", () => {});

`;

exports[`test-title > invalid(14): import test from \"node:test\";\ntest(\"  foo\", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("  foo", () => {});
    |      ^^^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test("foo", () => {});

`;

exports[`test-title > invalid(15): import test from \"node:test\";\ntest(\"foo  \", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("foo  ", () => {});

`;

exports[`test-title > invalid(15): import test from \"node:test\";\ntest(\"foo  \", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("foo  ", () => {});
    |      ^^^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test("foo", () => {});

`;

exports[`test-title > invalid(16): import test from \"node:test\";\ntest(' foo ', () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(' foo ', () => {});

`;

exports[`test-title > invalid(16): import test from \"node:test\";\ntest(' foo ', () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(' foo ', () => {});
    |      ^^^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test('foo', () => {});

`;

exports[`test-title > invalid(17): import test from \"node:test\";\ntest(\`  foo  \`, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(\`  foo  \`, () => {});

`;

exports[`test-title > invalid(17): import test from \"node:test\";\ntest(\`  foo  \`, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(\`  foo  \`, () => {});
    |      ^^^^^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test('foo', () => {});

`;

exports[`test-title > invalid(18): import test from \"node:test\";\ntest(\"foo\" /* keep me */ + \" \", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("foo" /* keep me */ + " ", () => {});

`;

exports[`test-title > invalid(18): import test from \"node:test\";\ntest(\"foo\" /* keep me */ + \" \", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("foo" /* keep me */ + " ", () => {});
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^ Test title must not have leading or trailing whitespace.

`;

exports[`test-title > invalid(19): import test from \"node:test\";\nconst titles = {a: \" foo \"};\ntest(titles /* keep me */.a, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | const titles = {a: " foo "};
  3 | test(titles /* keep me */.a, () => {});

`;

exports[`test-title > invalid(19): import test from \"node:test\";\nconst titles = {a: \" foo \"};\ntest(titles /* keep me */.a, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
  2 | const titles = {a: " foo "};
> 3 | test(titles /* keep me */.a, () => {});
    |      ^^^^^^^^^^^^^^^^^^^^^^ Test title must not have leading or trailing whitespace.

`;

exports[`test-title > invalid(2): import test from 'node:test';\ntest({name: 1, fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 1, fn() {}});

`;

exports[`test-title > invalid(2): import test from 'node:test';\ntest({name: 1, fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 1, fn() {}});
    |             ^ Test title must be a string.

`;

exports[`test-title > invalid(20): import test from \"node:test\";\ntest((0 /* keep me */, \" foo \"), () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test((0 /* keep me */, " foo "), () => {});

`;

exports[`test-title > invalid(20): import test from \"node:test\";\ntest((0 /* keep me */, \" foo \"), () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test((0 /* keep me */, " foo "), () => {});
    |       ^^^^^^^^^^^^^^^^^^^^^^^^ Test title must not have leading or trailing whitespace.

`;

exports[`test-title > invalid(21): import test from \"node:test\";\ntest(\"foo\" + /* keep me */ \" \", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("foo" + /* keep me */ " ", () => {});

`;

exports[`test-title > invalid(21): import test from \"node:test\";\ntest(\"foo\" + /* keep me */ \" \", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("foo" + /* keep me */ " ", () => {});
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^ Test title must not have leading or trailing whitespace.

`;

exports[`test-title > invalid(22): import test from \"node:test\";\nconst name = \" foo \";\ntest(name, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | const name = " foo ";
  3 | test(name, () => {});

`;

exports[`test-title > invalid(22): import test from \"node:test\";\nconst name = \" foo \";\ntest(name, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
  2 | const name = " foo ";
> 3 | test(name, () => {});
    |      ^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | const name = " foo ";
  3 | test('foo', () => {});

`;

exports[`test-title > invalid(23): import {it} from \"node:test\";\nit(() => {}); 1`] = `

  1 | import {it} from "node:test";
  2 | it(() => {});

`;

exports[`test-title > invalid(23): import {it} from \"node:test\";\nit(() => {}); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it(() => {});
    | ^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(24): import {describe} from \"node:test\";\ndescribe(() => {}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe(() => {});

`;

exports[`test-title > invalid(24): import {describe} from \"node:test\";\ndescribe(() => {}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe(() => {});
    | ^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(25): import {test as myTest} from \"node:test\";\nmyTest(() => {}); 1`] = `

  1 | import {test as myTest} from "node:test";
  2 | myTest(() => {});

`;

exports[`test-title > invalid(25): import {test as myTest} from \"node:test\";\nmyTest(() => {}); 2`] = `

Message:
  1 | import {test as myTest} from "node:test";
> 2 | myTest(() => {});
    | ^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(26): import * as nodeTest from \"node:test\";\nnodeTest.test(() => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test(() => {});

`;

exports[`test-title > invalid(26): import * as nodeTest from \"node:test\";\nnodeTest.test(() => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test(() => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(27): import test from \"node:test\";\ntest(() => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(() => {});

`;

exports[`test-title > invalid(27): import test from \"node:test\";\ntest(() => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(() => {});
    | ^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(28): import test from \"node:test\";\ntest({timeout: 1000} satisfies object, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test({timeout: 1000} satisfies object, () => {});

`;

exports[`test-title > invalid(28): import test from \"node:test\";\ntest({timeout: 1000} satisfies object, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test({timeout: 1000} satisfies object, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(29): import test from \"node:test\";\ntest(<any>{timeout: 1000}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(<any>{timeout: 1000}, () => {});

`;

exports[`test-title > invalid(29): import test from \"node:test\";\ntest(<any>{timeout: 1000}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(<any>{timeout: 1000}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(3): import test from 'node:test';\ntest({fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({fn() {}});

`;

exports[`test-title > invalid(3): import test from 'node:test';\ntest({fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({fn() {}});
    | ^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(30): import test from 'node:test';\ntest({name: ' a '}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: ' a '}, () => {});

`;

exports[`test-title > invalid(30): import test from 'node:test';\ntest({name: ' a '}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: ' a '}, () => {});
    |             ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'a'}, () => {});

`;

exports[`test-title > invalid(31): import test from \"node:test\";\ntest(\"my test\", {name: \" a \"}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("my test", {name: " a "}, () => {});

`;

exports[`test-title > invalid(31): import test from \"node:test\";\ntest(\"my test\", {name: \" a \"}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("my test", {name: " a "}, () => {});
    |                        ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from "node:test";
  2 | test("my test", {name: "a"}, () => {});

`;

exports[`test-title > invalid(32): import test from 'node:test';\ntest('b', {name: ' a ' as string}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('b', {name: ' a ' as string}, () => {});

`;

exports[`test-title > invalid(32): import test from 'node:test';\ntest('b', {name: ' a ' as string}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('b', {name: ' a ' as string}, () => {});
    |                  ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test('b', {name: 'a' as string}, () => {});

`;

exports[`test-title > invalid(33): import test from 'node:test';\ntest('b', {name: ' a '!}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('b', {name: ' a '!}, () => {});

`;

exports[`test-title > invalid(33): import test from 'node:test';\ntest('b', {name: ' a '!}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('b', {name: ' a '!}, () => {});
    |                  ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test('b', {name: 'a'!}, () => {});

`;

exports[`test-title > invalid(34): import test from 'node:test';\ntest({name: ' a ' satisfies string, fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: ' a ' satisfies string, fn() {}});

`;

exports[`test-title > invalid(34): import test from 'node:test';\ntest({name: ' a ' satisfies string, fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: ' a ' satisfies string, fn() {}});
    |             ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'a' satisfies string, fn() {}});

`;

exports[`test-title > invalid(35): import test from 'node:test';\ntest('c', {name: <string>' a '}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('c', {name: <string>' a '}, () => {});

`;

exports[`test-title > invalid(35): import test from 'node:test';\ntest('c', {name: <string>' a '}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('c', {name: <string>' a '}, () => {});
    |                          ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | test('c', {name: <string>'a'}, () => {});

`;

exports[`test-title > invalid(36): import {test} from 'node:test';\ntest('p', async t => { await t.test(() => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test(() => {}); });

`;

exports[`test-title > invalid(36): import {test} from 'node:test';\ntest('p', async t => { await t.test(() => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test(() => {}); });
    |                              ^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(37): import {test} from 'node:test';\ntest('p', async t => { await t.test(123, () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test(123, () => {}); });

`;

exports[`test-title > invalid(37): import {test} from 'node:test';\ntest('p', async t => { await t.test(123, () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test(123, () => {}); });
    |                                     ^^^ Test title must be a string.

`;

exports[`test-title > invalid(38): import test from \"node:test\";\ntest(undefined, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(undefined, () => {});

`;

exports[`test-title > invalid(38): import test from \"node:test\";\ntest(undefined, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(undefined, () => {});
    |      ^^^^^^^^^ Test title must be a string.

`;

exports[`test-title > invalid(39): import test from \"node:test\";\ntest(NaN, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(NaN, () => {});

`;

exports[`test-title > invalid(39): import test from \"node:test\";\ntest(NaN, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(NaN, () => {});
    |      ^^^ Test title must be a string.

`;

exports[`test-title > invalid(4): import test from 'node:test';\nconst body = () => {};\ntest(' a ', body); 1`] = `

  1 | import test from 'node:test';
  2 | const body = () => {};
  3 | test(' a ', body);

`;

exports[`test-title > invalid(4): import test from 'node:test';\nconst body = () => {};\ntest(' a ', body); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const body = () => {};
> 3 | test(' a ', body);
    |      ^^^^^ Test title must not have leading or trailing whitespace.

Output:
  1 | import test from 'node:test';
  2 | const body = () => {};
  3 | test('a', body);

`;

exports[`test-title > invalid(40): import test from \"node:test\";\ntest('pos', {name: 5}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test('pos', {name: 5}, () => {});

`;

exports[`test-title > invalid(40): import test from \"node:test\";\ntest('pos', {name: 5}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test('pos', {name: 5}, () => {});
    |                    ^ Test title must be a string.

`;

exports[`test-title > invalid(41): import test from \"node:test\";\ntest('pos', {name: undefined}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test('pos', {name: undefined}, () => {});

`;

exports[`test-title > invalid(41): import test from \"node:test\";\ntest('pos', {name: undefined}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test('pos', {name: undefined}, () => {});
    |                    ^^^^^^^^^ Test title must be a string.

`;

exports[`test-title > invalid(42): import test from \"node:test\";\ntest(() => {}, {name: 5}); 1`] = `

  1 | import test from "node:test";
  2 | test(() => {}, {name: 5});

`;

exports[`test-title > invalid(42): import test from \"node:test\";\ntest(() => {}, {name: 5}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(() => {}, {name: 5});
    |                       ^ Test title must be a string.

`;

exports[`test-title > invalid(43): import test from \"node:test\";\ntest(() => {}, {skip: true}); 1`] = `

  1 | import test from "node:test";
  2 | test(() => {}, {skip: true});

`;

exports[`test-title > invalid(43): import test from \"node:test\";\ntest(() => {}, {skip: true}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(() => {}, {skip: true});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(44): import test from \"node:test\";\ntest(() => {}, {}); 1`] = `

  1 | import test from "node:test";
  2 | test(() => {}, {});

`;

exports[`test-title > invalid(44): import test from \"node:test\";\ntest(() => {}, {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(() => {}, {});
    | ^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(45): import {describe} from \"node:test\";\ndescribe(() => {}, {skip: true}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe(() => {}, {skip: true});

`;

exports[`test-title > invalid(45): import {describe} from \"node:test\";\ndescribe(() => {}, {skip: true}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe(() => {}, {skip: true});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(46): import {suite} from \"node:test\";\nsuite(() => {}, {skip: true}); 1`] = `

  1 | import {suite} from "node:test";
  2 | suite(() => {}, {skip: true});

`;

exports[`test-title > invalid(46): import {suite} from \"node:test\";\nsuite(() => {}, {skip: true}); 2`] = `

Message:
  1 | import {suite} from "node:test";
> 2 | suite(() => {}, {skip: true});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(47): import {test} from 'node:test';\ntest('p', async t => { await t.test(() => {}, {skip: true}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test(() => {}, {skip: true}); });

`;

exports[`test-title > invalid(47): import {test} from 'node:test';\ntest('p', async t => { await t.test(() => {}, {skip: true}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test(() => {}, {skip: true}); });
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(48): import test from 'node:test';\ntest((() => {}) as any, {skip: true}); 1`] = `

  1 | import test from 'node:test';
  2 | test((() => {}) as any, {skip: true});

`;

exports[`test-title > invalid(48): import test from 'node:test';\ntest((() => {}) as any, {skip: true}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test((() => {}) as any, {skip: true});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(49): import test from 'node:test';\ntest((() => {}) as any); 1`] = `

  1 | import test from 'node:test';
  2 | test((() => {}) as any);

`;

exports[`test-title > invalid(49): import test from 'node:test';\ntest((() => {}) as any); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test((() => {}) as any);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(5): import test from \"node:test\";\ntest(() => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(() => {});

`;

exports[`test-title > invalid(5): import test from \"node:test\";\ntest(() => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(() => {});
    | ^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(50): import test from 'node:test';\ntest((() => {})!); 1`] = `

  1 | import test from 'node:test';
  2 | test((() => {})!);

`;

exports[`test-title > invalid(50): import test from 'node:test';\ntest((() => {})!); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test((() => {})!);
    | ^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(6): import test from \"node:test\";\ntest({timeout: 1000}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test({timeout: 1000}, () => {});

`;

exports[`test-title > invalid(6): import test from \"node:test\";\ntest({timeout: 1000}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test({timeout: 1000}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test must have a title.

`;

exports[`test-title > invalid(7): import test from \"node:test\";\ntest(123, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(123, () => {});

`;

exports[`test-title > invalid(7): import test from \"node:test\";\ntest(123, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(123, () => {});
    |      ^^^ Test title must be a string.

`;

exports[`test-title > invalid(8): import test from \"node:test\";\ntest(true, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(true, () => {});

`;

exports[`test-title > invalid(8): import test from \"node:test\";\ntest(true, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(true, () => {});
    |      ^^^^ Test title must be a string.

`;

exports[`test-title > invalid(9): import test from \"node:test\";\ntest(null, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test(null, () => {});

`;

exports[`test-title > invalid(9): import test from \"node:test\";\ntest(null, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test(null, () => {});
    |      ^^^^ Test title must be a string.

`;
